app/assets/stylesheets/webcat_complaint_entries.scss
$primary-section-color : #6dbcdb;   /* Medium Blue    */
$content-bg-color:  #fff;       /* White           */
$type-lighter-color: #666;   /* Medium Grey */
$faint-neutral-color: #f2f2f2;
$type-base-color:    #333;   /* Dark Grey */
$faint-accent-color:  #dff1f7;
$nav-toolbar-color: #d7dadb;    /* Medium Grey     */
$type-faint-accent: #D7DADB; /* Lighter Grey */
$selectize-border: #E5E5E5;

.complaint-entry-show-content-wrapper {

  @-moz-document url-prefix() {
    .complaint-owner-buttons-wrapper button#index_change_assign {
      position: relative;
      top: -2px;
    }
  }

  @media screen and (max-width: 1700px) and (min-width: 1201px){
    .ticket-overview-wrapper {
      .complaint-owner-buttons-wrapper {
        margin-left: 1px;
      }
    }
  }

  .webcat-complaint-case-wrapper {
    display: flex;
  }

  .webcat-complaint-important-reviewed-wrapper {
    display: flex;
    flex-direction: column;
    margin: 2px 10px 0 0;

    .is-important, .was-reviewed {
      background-repeat: no-repeat;
      display: inline-block;
      width: 20px;
      height: 20px;
      margin-bottom: 3px;
    }

    .is-important {
      background-image: url(image_path('icon_important.svg'));
    }

    .was-reviewed {
      background-image: url(image_path('icon_reviewed_check.svg'));
    }
  }

  .complaint-assignee-wrapper, .complaint-reviewer-wrapper, .complaint-second-reviewer-wrapper {
    display: flex;
    justify-content: space-between;
    margin-bottom: 2px;
    &:last-of-type {
      margin-bottom: 0;
    }

    .user-image {
      background-repeat: no-repeat;
      padding-left: 20px
    }

    #complaint-assignee {
      background-image: url(image_path('icon_user_grey.svg'));
      background-size: 15px;
      background-position: center left 2px;
    }
    #complaint-reviewer {
      background-image: url(image_path('icon_check_grey.svg'));
    }
    #complaint-second-reviewer {
      background-image: url(image_path('icon_doublecheck_grey.svg'));
    }
  }

  .complaint-owner-wrapper {
    display: flex;
    flex-direction: column;
  }

  .complaint-owner-buttons-wrapper {
    align-self: flex-end;
    display: flex;
    min-width: 50px;
    justify-content: flex-end;

    h3 {
      padding: 2px 10px !important;
    }

    .dropdown.open {
      background-color: transparent !important;
    }

    .dropdown-menu {
      background-color: $primary-section-color;
      border-radius: 0 4px 4px 4px;
      border: none;
      left: 3px;
      min-width: 200px;
      top: 18px;

      h3 {
        color: $content-bg-color;
        font-size: 9pt;
        font-weight: 400;
        margin-bottom: 6px;
        padding: 0 10px;
      }
    }

    .inline-tool-content-wrapper {
      padding-bottom: 20px;
    }

    .return-ticket-button, .take-ticket-button {
      background-color: transparent !important;
      margin: 0;
    }

    .take-ticket-button {
      float: none;
    }

    .ticket-owner-button {
      background-image: url(image_path('icon_user_white.svg'));
      background-size: 15px;

      &:hover {
        background-color: $primary-section-color !important;
      }
    }
  }

  .complaint-inline-buttons {
    background-color: darken($nav-toolbar-color, 10%);
    background-position: center center;
    background-repeat: no-repeat;
    background-size: 20px 20px;
    border-radius: 2px;
    border: none;
    display: inline-block;
    height: 20px;
    margin: 0 3px;
    width: 20px;
  }
}

.ce-research-tab {
  h2 {
    font-size: 15px;
    font-weight: 700;
    padding: 3px 0 10px;
    margin-top: 20px;
  }
  .toolbar {
    margin-bottom: 20px;
    margin-top: 24px;
  }
  & > div {
    border-right: 1px solid darken($content-bg-color, 6.5%);

    &:last-child {
      border-right: none;
    }
  }
  .bottom-divider {
    padding-bottom: 30px !important;
    margin-bottom: 30px !important;
  }
  .customer-submitted-data-wrapper {
    margin-bottom: 10px;
    .content-label-sm {
      margin-top: 10px;
    }
  }
}

.ce-research-column, .ce-history-column {
  & > div:not(.alert) {
    padding: 0 0 10px;
  }

  & > label {
    width: 100%;
  }

  div {
    box-sizing: border-box;
  }

  p {
    font-size: 12px;
  }

  #ce_description {
    word-break: break-all;
  }

  .ce-input:disabled {
    color: $type-lighter-color;
    cursor: not-allowed;
    opacity: 0.7;
  }

  .ce-tab-title {
    margin-bottom: 14px;
  }

  #ce_research_toolbar {
    margin-top: -8px;

    .toolbar-button-text {
      float: none;
    }
    .toolbar .dropdown-menu {
      margin: 0 !important;

      .row {
        margin-right: -15px !important;
        margin-top: 0;
        margin-bottom: 0;
        width: 100%;
        .col-xs-3 {
          margin: 0 !important;
          border-right: 1px solid #d8dadb;
          &:last-of-type {
            border-right: none;
          }
        }
      }

      .dropdown-label {
        margin: 10px 10px 0 10px;
        font-weight: 600;
      }

      ul.show-col-list {
        li {
          display: block;
          padding: 4px 8px;

          &.sub-checkbox-wrapper {
            background-color: #F5F5F5;
            padding: 5px 12px 2px 12px;
          }

          .webcat-view-data-cb {
            float: left;
            cursor: pointer;
            margin: 0 5px 0 0;
          }

          label {
            cursor: pointer;
            margin: 0 0 4px 0;
          }
        }
      }
    }
  }

  .research-data-header, .history-data-header {
    border-bottom: none;
    color: $type-lighter-color;
    font-size: initial;
    padding-left: 0;
  }

  .ce-submitted-wbrs-wrapper {
    display: flex;

    .ce-submitted-ip-uri {
      font-weight: 600;
    }
  }

  #ce_wbrs_score_wrapper {
    width: 50px;

    .webcat-research-svg {
      bottom: 5px;
      margin-right: 0;
      display: initial;
      position: relative;
    }
  }

  .categories-table {
    font-size: 11px;
    text-align: left;
    margin-top: 0;
    margin-bottom: 20px;
    &:last-of-type {
      margin-bottom: 0;
    }

    td, th {
      border-color: #eee;
      padding: 4px;
      line-height: 1.25em;
    }
  }

  .data-report-table {
    margin-bottom: 20px;

    > thead > tr > th {
      border-bottom-color: $faint-neutral-color;
      color: $type-base-color;
      padding-left: 0;
      padding-right: 0;
    }

    > tbody > tr > td {
      color: $type-lighter-color;
      padding-left: 0;
      padding-right: 0;
    }

    .description-wrapper {
      word-break: break-all;
      min-width: 150px;
    }

    .truncated-description {
      // this is the hex code for the ellipsis character
      //content: '\002026';
      display: inline-block;
      background-color: #d7e6ee;
      cursor: pointer;
      margin-left: 2px;
    }
  }

  .ce-resolved-ip-uri-button-wrapper {
    margin: 5px 0 40px;
  }

  #ce_tags_wrapper {
    align-items: center;
    display: flex;
    gap: 50px;

    p {
      align-items: center;
      display: flex;
    }

    .tag-capsule {
      cursor: unset;

      &:hover {
        background-color: $primary-section-color;
      }
    }

    .ce-tags-select {
      border: 1px solid $selectize-border;
      border-radius: 1px;
      min-height: 26px;
      padding: 4px;
      width: 100%;
    }

    .tags-button {
      background-image: url(image_path('icon_edit.svg'));
      background-position: center center;
      background-repeat: no-repeat;
      border: none;
      border-radius: 2px;
      display: inline-block;
      height: 20px;
      padding: 4px;
      width: 20px;
    }

    .save-tags {
      margin-left: auto;
    }
  }

  .ce-categories-wrapper, .ce-resolution-wrapper, .ce-customer-comment-wrapper,
  .ce-internal-comment-wrapper {
    margin-bottom: 20px;
  }

  .ce-input {
    background-color: lighten($faint-accent-color, 5%);
    border: 2px solid lighten($faint-accent-color, 5%);
    border-radius: 1px;
    margin: 0;
    padding: 0;
    outline: 1px solid $type-faint-accent;
    width: 100%;
  }

  .ip-uri-button {
    background-color: darken($type-faint-accent, 5%);
    border: none;
    border-radius: 2px;
    color: $type-lighter-color;
    float: left;
    font-size: 10px;
    margin: 0 5px 5px;
    min-height: 15px;
    padding: 0 10px;

    &:first-child {
      margin-left: 0;
    }
  }

  .selectize-control.ce-ip-uri-input, .selectize-control.ce-customer-comment-select-box, .selectize-control.ce-categories-select {
    margin: 0;
    min-height: 33px;
    padding: 3px 4px 7px 4px;
  }

  .ce-categories-select {
    .selectize-input {
      background-color: lighten($faint-accent-color, 5%);
      margin-bottom: -7px !important;
    }

    .selectize-input.disabled {
      top: 2px;
    }

    &.selectize-dropdown {
      margin-top: 12px;
    }
  }

  .ce-customer-comment-select-box {
    margin: 0 0 10px;
  }

  .bug-button {
    background-color: $type-faint-accent;
    background-image: url(image_path('bugs_icon.svg'));
    background-position: center center;
    background-repeat: no-repeat;
    background-size: 20px 20px;
    border-radius: 2px;
    border: none;
    float: right;
    height: 20px;
    width: 20px;
  }

  .ce-radio-group-wrapper {
    display: flex;
    gap: 20px;
  }

  .ce-radio-group {
    display: flex;
    gap: 4px;

    .resolution-radio-button, .review-radio-button {
      appearance: none;
      --webkit-appearance: none;
      background-color: $content-bg-color;
      border: 1px solid $type-lighter-color;
      border-radius: 50%;
      // color: black;
      display: grid;
      height: 14px;
      margin: 0;
      place-content: center;
      transform: translateY(-1px);
      width: 14px;

      &::before {
        border-radius: 50%;
        box-shadow: inset 16px 16px $type-lighter-color;
        content: "";
        height: 6px;
        transform: scale(0);
        transition: 120ms transform ease-in-out;
        width: 6px;
      }

      &:checked {
        background-color: black;
      }

      &:checked::before {
        background-color: $type-lighter-color;
        border: 1px solid $type-lighter-color;
        outline: 2px solid $type-lighter-color;
        outline-offset: 2px;
        transform: scale(1)
      }

      &:focus {
        outline: none;
      }

      &:disabled {
        appearance: auto;
        background-color: $type-lighter-color;
        border-color: $type-lighter-color;
        color: $content-bg-color;
      }

      &:disabled::before {
        background-color: initial;
        border: 0;
        content: none;
        outline: 0;
        outline-offset: 0;
        transform: none;
      }
    }

    .radio-label {
      display: inline;
    }
  }

  .ce-customer-comment-textarea, .ce-internal-comment-textarea {
    font-size: 12px;
    line-height: 1.4;
    resize: none;
  }

  .ce-customer-comment-textarea {
    min-height: 150px;
  }

  .ce-internal-comment-textarea {
    min-height: 50px;

    &::placeholder {
      color: $type-lighter-color;
      font-style: italic;
    }
  }

  .dataTables_wrapper {
    .datatable-top-tools {
      float: left;
    }
  }

  .whois-data-container th {
    border-bottom: 1px solid $faint-neutral-color;

    .missing-data {
      padding-top: 10px;
    }
  }

  .alert.alert-dismissable.alert-streamlined {
    left: 75px;
    top: 0;
  }

  .ce-allow-review-container {
    align-items: center;
    background-color: $faint-neutral-color;
    border-radius: 2px;
    column-gap: 5px;
    display: flex;
    justify-content: center;
    margin: 12px 0 0;
    padding: 15px 20px;

    input {
      margin: 0;
    }
  }

  .data-report-table-column-header {
    font-weight: 900;
    padding-right: 5px;
    width: 125px;
  }

  .loader-div {
    align-items: center;
    display: flex;
    justify-content: center;
    margin: 0 auto;
    padding: 0;
    text-align: center;
    width: 100%;

    .gear-loader-wrapper {
      margin: -1px 4px 0 0;
    }
  }
}

